--- a/observium/supervisord.conf
+++ b/observium/supervisord.conf
@@ -26,6 +26,14 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 user=root
 
+[program:dnsmasq]
+command=/bin/bash -c "/etc/init.d/dnsmasq start"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+user=root
+
 [program:init]
 command=/bin/bash -c "/opt/observium/observium-init.sh"
 stdout_logfile=/dev/stdout
